Instant Address Standard/main/default/objects/Contract/fields/Billing_Address_Change_Flag__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Change_Flag__c</fullName>
    <description>Contains comma separated codes that specify the portion of the address that was changed or modified.</description>
    <inlineHelpText>Contains comma separated codes that specify the portion of the address that was changed or modified.</inlineHelpText>
    <label>Billing Change Flag</label>
    <length>50</length>
    <type>Text</type>
</CustomField>