Instant Address Standard/main/default/objects/Contract/fields/Billing_Country_Id__c.field-meta.xml
<CustomField>
    <fullName>Billing_Country_Id__c</fullName>
    <description>The id of the geographical region within which the address is located</description>
    <inlineHelpText>The id of the geographical region within which the address is located</inlineHelpText>
    <label>Billing Country Id</label>
    <length>5</length>
    <type>Text</type>
</CustomField>