Instant Address Standard/main/default/objects/Contract/fields/Billing_County_Id__c.field-meta.xml
<CustomField>
    <fullName>Billing_County_Id__c</fullName>
    <description>The id of the geographical region within which the address is located.</description>
    <inlineHelpText>The id of the geographical region within which the address is located.</inlineHelpText>
    <label>Billing County Id</label>
    <length>3</length>
    <type>Text</type>
</CustomField>