Instant Address Standard/main/default/objects/Contract/fields/Billing_Delivery_Point_Check_Digit__c.field-meta.xml
<CustomField>
    <fullName>Billing_Delivery_Point_Check_Digit__c</fullName>
    <description>Single check digit provided by USPS.</description>
    <inlineHelpText>Single check digit provided by USPS.</inlineHelpText>
    <label>Billing Delivery Point Check Digit</label>
    <length>1</length>
    <type>Text</type>
</CustomField>