Instant Address Standard/main/default/objects/Contract/fields/Billing_Delivery_Point_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Delivery_Point_Code__c</fullName>
    <description>Two digit validation code provided by USPS.</description>
    <inlineHelpText>Two digit validation code provided by USPS.</inlineHelpText>
    <label>Billing Delivery Point Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>