Instant Address Standard/main/default/objects/Contract/fields/Billing_Delivery_Point_Validation__c.field-meta.xml
<CustomField>
    <fullName>Billing_Delivery_Point_Validation__c</fullName>
    <description>Three digit validation code provided by USPS.</description>
    <inlineHelpText>Three digit validation code provided by USPS.</inlineHelpText>
    <label>Billing Delivery Point Validation</label>
    <length>3</length>
    <type>Text</type>
</CustomField>