Instant Address Standard/main/default/objects/Contract/fields/Billing_Delivery_Point_Validation_Flag__c.field-meta.xml
<CustomField>
    <fullName>Billing_Delivery_Point_Validation_Flag__c</fullName>
    <description>Single character indicating delivery point validation status, (Y) Yes, (N) No</description>
    <inlineHelpText>Single character indicating delivery point validation status, (Y) Yes, (N) No</inlineHelpText>
    <label>Billing Delivery Point Validation Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>