Instant Address Standard/main/default/objects/Contract/fields/Billing_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Billing_Latitude__c</fullName>
    <description>Specifies the north south position of a point on the Earth&apos;s surface.</description>
    <inlineHelpText>Specifies the north south position of a point on the Earth&apos;s surface.</inlineHelpText>
    <label>Billing Latitude</label>
    <length>12</length>
    <type>Text</type>
</CustomField>