Instant Address Standard/main/default/objects/Contract/fields/Billing_Residential_Delivery_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Billing_Residential_Delivery_Indicator__c</fullName>
    <description>The Residential Delivery Indicator of the address</description>
    <inlineHelpText>The Residential Delivery Indicator of the address</inlineHelpText>
    <label>Billing Residential Delivery Indicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>