Instant Address Standard/main/default/objects/Contract/fields/Billing_State_Id__c.field-meta.xml
<CustomField>
    <fullName>Billing_State_Id__c</fullName>
    <description>The state id of the address.</description>
    <inlineHelpText>The state id of the address.</inlineHelpText>
    <label>Billing State Id</label>
    <length>2</length>
    <type>Text</type>
</CustomField>