Instant Address Standard/main/default/objects/Contract/fields/Billing_SummaryFlags__c.field-meta.xml
<CustomField>
    <fullName>Billing_SummaryFlags__c</fullName>
    <label>Billing SummaryFlags</label>
    <length>100</length>
    <type>Text</type>
</CustomField>