Instant Address Standard/main/default/objects/Contract/fields/Billing_UITooltip__c.field-meta.xml
<CustomField>
    <fullName>Billing_UITooltip__c</fullName>
    <label>Billing UITooltip</label>
    <length>200</length>
    <type>Text</type>
</CustomField>