Instant Address Standard/main/default/objects/Contract/fields/Billing_Validation_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Validation_Date__c</fullName>
    <description>The date the address was validated.</description>
    <inlineHelpText>The date the address was validated.</inlineHelpText>
    <label>Billing Validation Date</label>
    <type>DateTime</type>
</CustomField>