Instant Address Standard/main/default/objects/Contract/fields/Billing_Verification_Flag__c.field-meta.xml
<CustomField>
    <fullName>Billing_Verification_Flag__c</fullName>
    <description>High level validation flag indicating status, (V) Verified, (N) Not Verified, (O) Overridden.</description>
    <inlineHelpText>High level validation flag indicating status, (V) Verified, (N) Not Verified, (O) Overridden.</inlineHelpText>
    <label>Billing Verification Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>