Instant Address Standard/main/default/objects/Contract/fields/Shipping_Carrier_Route__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Carrier_Route__c</fullName>
    <description>An alphanumeric code assigned to a mail delivery or collection route within a zip code.</description>
    <inlineHelpText>An alphanumeric code assigned to a mail delivery or collection route within a zip code.</inlineHelpText>
    <label>Shipping Carrier Route</label>
    <length>10</length>
    <type>Text</type>
</CustomField>