Instant Address Standard/main/default/objects/Contract/fields/Shipping_Change_Flags__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Change_Flags__c</fullName>
    <description>Contains comma separated codes that specify the portion of the address that was changed or modified.</description>
    <inlineHelpText>Contains comma separated codes that specify the portion of the address that was changed or modified.</inlineHelpText>
    <label>Shipping Change Flags</label>
    <length>50</length>
    <type>Text</type>
</CustomField>