Instant Address Standard/main/default/objects/Contract/fields/Shipping_Country_Id__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Country_Id__c</fullName>
    <description>The id of the geographical region within which the address is located</description>
    <inlineHelpText>The id of the geographical region within which the address is located</inlineHelpText>
    <label>Shipping Country Id</label>
    <length>5</length>
    <type>Text</type>
</CustomField>