Instant Address Standard/main/default/objects/Contract/fields/Shipping_County_Id__c.field-meta.xml
<CustomField>
    <fullName>Shipping_County_Id__c</fullName>
    <description>The id of the geographical region within which the address is located.</description>
    <inlineHelpText>The id of the geographical region within which the address is located.</inlineHelpText>
    <label>Shipping County Id</label>
    <length>3</length>
    <type>Text</type>
</CustomField>