Instant Address Standard/main/default/objects/Contract/fields/Shipping_County_Name__c.field-meta.xml
<CustomField>
    <fullName>Shipping_County_Name__c</fullName>
    <description>The name of the geographical region within which the address is located.</description>
    <inlineHelpText>The name of the geographical region within which the address is located.</inlineHelpText>
    <label>Shipping County Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>