Instant Address Standard/main/default/objects/Contract/fields/Shipping_Delivery_Point_Code__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Delivery_Point_Code__c</fullName>
    <description>Two digit validation code provided by USPS.</description>
    <inlineHelpText>Two digit validation code provided by USPS.</inlineHelpText>
    <label>Shipping Delivery Point Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>