Instant Address Standard/main/default/objects/Contract/fields/Shipping_FIPS_Code__c.field-meta.xml
<CustomField>
    <fullName>Shipping_FIPS_Code__c</fullName>
    <description>The Federal Information Processing Standard state code of the  address.</description>
    <inlineHelpText>The Federal Information Processing Standard state code of the  address.</inlineHelpText>
    <label>Shipping FIPS Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>