Instant Address Standard/main/default/objects/Contract/fields/Shipping_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Longitude__c</fullName>
    <description>Specifies the east west position of a point on the Earth&apos;s surface.</description>
    <inlineHelpText>Specifies the east west position of a point on the Earth&apos;s surface.</inlineHelpText>
    <label>Shipping Longitude</label>
    <length>12</length>
    <type>Text</type>
</CustomField>