Instant Address Standard/main/default/objects/Contract/fields/Shipping_Response_Flag__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Response_Flag__c</fullName>
    <description>Mid level validation flag indicating detailed status, (E) Exact, (T) Tentative, (M) Multiple, (S) Secondary, (U) Unmatched, (F) Foreign</description>
    <inlineHelpText>Mid level validation flag indicating detailed status, (E) Exact, (T) Tentative, (M) Multiple, (S) Secondary, (U) Unmatched, (F) Foreign</inlineHelpText>
    <label>Shipping Response Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>