Instant Address Standard/main/default/objects/Contract/fields/Shipping_State_Id__c.field-meta.xml
<CustomField>
    <fullName>Shipping_State_Id__c</fullName>
    <description>The state id of the address.</description>
    <inlineHelpText>The state id of the address.</inlineHelpText>
    <label>Shipping State Id</label>
    <length>2</length>
    <type>Text</type>
</CustomField>