Instant Address Standard/main/default/objects/Contract/fields/Shipping_SummaryFlags__c.field-meta.xml
<CustomField>
    <fullName>Shipping_SummaryFlags__c</fullName>
    <label>Shipping SummaryFlags</label>
    <length>100</length>
    <type>Text</type>
</CustomField>