Instant Address Standard/main/default/objects/Contract/fields/Shipping_UITooltip__c.field-meta.xml
<CustomField>
    <fullName>Shipping_UITooltip__c</fullName>
    <label>Shipping UITooltip</label>
    <length>200</length>
    <type>Text</type>
</CustomField>