Instant Address Standard/main/default/objects/Contract/fields/Shipping_Validation_Date__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Validation_Date__c</fullName>
    <description>The date the address was validated.</description>
    <inlineHelpText>The date the address was validated.</inlineHelpText>
    <label>Shipping Validation Date</label>
    <type>Date</type>
</CustomField>