Instant Address Standard/main/default/objects/Contract/fields/Shipping_Verification_Flag__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Verification_Flag__c</fullName>
    <description>High level validation flag indicating status, (V) Verified, (N) Not Verified, (O) Overridden.</description>
    <inlineHelpText>High level validation flag indicating status, (V) Verified, (N) Not Verified, (O) Overridden.</inlineHelpText>
    <label>Shipping Verification Flag</label>
    <type>DateTime</type>
</CustomField>